--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,10 +175,9 @@ nav ul li a:hover::after {
 }
 
 .profile-photo {
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    object-fit: cover;
+    width: 2200px;
+    height: 220px;
+    border-radius: 16px;
     border: 20px solid var(--white-color);
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 }
