--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,6 +178,7 @@ nav ul li a:hover::after {
     width: 2200px;
     height: 220px;
     border-radius: 16px;
+    object-fit: cover;
     border: 20px solid var(--white-color);
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 }
