--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,7 +177,7 @@ nav ul li a:hover::after {
 .profile-photo {
     width: 220px;
     height: 220px;
-    border-radius: 16px;
+    border-radius: 20%;
     object-fit: cover;
     border: 20px solid var(--white-color);
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
